= 1.1.22 =
* Avada converts checkbox to select dropdown don't saves empty value - CHANGED

= 1.1.21 =
* New line character in translation results in JS error - FIXED
* Background Gradient picker broken after WP update - FIXED

= 1.1.20 =
* WP installs less than 5.9 can throw fatal error for render_block filter - FIXED

= 1.1.19 =
* Block Visibility feature added - ADDED

= 1.1.18 =
* Added helper function for float inputs - ADDED

= 1.1.17 =
* Block tab groups mismatch causes JS error - FIXED

= 1.1.16 =
* Better block auto-recovery - ADDED
* Functions added to support BS5 changes and new features - ADDED

= 1.1.15 =
* Prevent duplicate CPT sort options API requests - FIXED

= 1.1.14 =
* Helper functions for BS5 added - ADDED
* Will try to auto-recover blocks in editor - ADDED
* Single apostrophe will break block input settings - FIXED

= 1.1.11 =
* Functions added to build CSS for some hover args - ADDED
* Template parts auto recover blocks not working - FIXED
* Multiple taxonomies API requests can cause a loop - FIXED

= 1.1.10 =
* styleid argument now auto added to class list - ADDED

= 1.1.9 =
* Device type switcher not working on multiline items - FIXED
* Spacing option increased from 5 to 12 - ADDED
* MultiSelect inputs now show a clear button - ADDED

= 1.1.8 =
* prevent JS error that breaks the GD block - FIXED
* bug with justify content between helper function - FIXED

= 1.1.5 =
* Customize > Widgets section don't show advanced settings toggle button - FIXED
* Flex positioning helper functions - ADDED

= 1.1.4 =
* Hover animations helper functions - ADDED
* Flex layout helper classes - ADDED
* Constant added for version number SUPER_DUPER_VER - ADDED

= 1.1.3 =
* Preview mode can now be changed from block setting icon - ADDED
* text_color_custom now implemented for inline custom colors - ADDED

= 1.1.2 =
* BlockStrap theme color pickers will now add custom colors from FSE - ADDED

= 1.1.1 =